BB-6858: Update sidebar expand/collapse button according to design - fix styles for sidebar collapse/expand - fix styles for filter button

--- a/src/Oro/Bundle/ProductBundle/Resources/public/css/grid-sidebar.less
+++ b/src/Oro/Bundle/ProductBundle/Resources/public/css/grid-sidebar.less
@@ -1,11 +1,11 @@
-@sidebarHorizontalPadding: 5px;
+@sidebarHorizontalPadding: 6px;
 @sidebarVerticalPadding: 10px;
 @select2IconBtnWidth: 30px;
 @borderWidth: 1px;
 
 .grid-sidebar {
   position: absolute;
-  top: 0;
+  top: 11px;
   padding: 0;
   height: 100%;
   background-color: #efefef;
