--- a/src/Oro/Bundle/ProductBundle/Resources/public/css/style.less
+++ b/src/Oro/Bundle/ProductBundle/Resources/public/css/style.less
@@ -76,6 +76,35 @@
   }
 }
 
+.mobile-version{
+  .product-index-content {
+    &.grid-sidebar-minimized {
+      margin-left: 0;
+
+      .filter-box {
+        padding-left: 43px;
+      }
+    }
+  }
+
+  .product-container {
+    .grid-sidebar {
+      &.grid-sidebar-minimized {
+        background-color: transparent;
+
+        .grid-sidebar-header {
+          background-color: #efefef;
+        }
+      }
+    }
+
+    .box-type1 {
+      margin-left: 0;
+      margin-right: 0;
+    }
+  }
+}
+
 .row-oro {
   &.add-products {
     float: left;
